[package]
name = "multiboot2"
version = "0.1.0"
authors = [
	"Philipp Oppermann <dev@phil-opp.com>",
	"Sean Kell <sean.michael.kell@gmail.com>"
 ]

[dependencies.bitflags]
git = "https://github.com/smkell/bitflags.git"
branch = "no_std"

[dependencies.core]
git = "https://github.com/phil-opp/nightly-libcore.git"
